IOTD: fix z-index of queue badge

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -4760,7 +4760,7 @@ table.search-table {
         position: absolute;
         top: 10px;
         left: 10px;
-        z-index: 1;
+        z-index: 2;
 
         .badge {
             font-size: 16px;
